# chrome-but-fast

./: custom_performance_build.gn  resource_compression_improvements.md
chrome/browser/: process_optimiztion.cc
chrome/browser/memory/: tab_discarding_policy.cc
chrome/browser/ui/performance_controls/: memory_saver_utils.cc
ios/chrome/browser/omnibox/model/: DEPS
