# Custom GN args for performance-optimized build

# Core optimizations
is_debug = false
is_official_build = true
symbol_level = 0
enable_nacl = false
blink_symbol_level = 0
v8_symbol_level = 0

# Memory optimizations
use_thin_lto = true
use_jumbo_build = true
enable_precompiled_headers = true
enable_resource_allowlist_generation = true

# Chrome-specific memory optimizations
fieldtrial_testing_like_official_build = true
optimize_webui = true
enable_aggressive_tab_discard = true  # Custom flag we'd add
experimental_fast_renderer = true     # Custom flag we'd add
